# Neuroscience

./: .gitignore  22045.swc  CLAUDE.md  README.md  ci.template.yml  example.html  frontend.pid  index.html  package.json  simple_hh_sim.py  simple_hh_test_blender.py  start-frontend.sh  start_services.sh  stop_services.sh  swc_converter.py  tailwind.config.cjs  tsconfig.json  vercel.json  vite.config.ts
.claude/: settings.local.json
backend/: README.md  pyproject.toml
backend/backend/: api.py  cli.py  config.py  main.py
backend/tests/: test_main.py
data/: cheetah_pyramidal_neuron.pickle
frontend/: README.md  package.json  vite.config.ts
frontend/src/: App.vue  index.css
frontend/src/components/: Sidebar.vue
frontend/src/pages/: Topic1Page1.vue  Topic1Page2.vue  Topic2Page1.vue
frontend/src/router/: index.ts
public/models/: blenderSpike_test.glb  blenderSpike_test.json  horseshoe_crab_basic.glb  material_test.json
scripts/: CONVERSION_COMPARISON.md  README_NEURON_SWC_CONVERTER.md  neuron_swc_to_blenderspike.py  verify_pickle_connectivity.py
src/: App.vue  index.css  main.ts  style.css
src/components/: ExampleTwoPaneUsage.vue  SearchBar.vue  SearchResults.vue  Shared3DModelViewer.vue  Sidebar.vue  TwoPaneVisualizationSection.vue
src/pages/: GlossaryPage.vue  HomePage.vue  HowToUsePage.vue  Topic1Page1.vue  Topic1Page2.vue  Topic2Page1.vue  Topic3Page.vue
src/router/: index.ts
src/types/: search.ts
src/utilities/: BlenderModelViewer.js  Generic3DModelViewer.js  searchUtils.ts
