[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Helen Peng",email = "helen.jiayue.peng@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi (>=0.115.12,<0.116.0)",
    "uvicorn (>=0.34.3,<0.35.0)",
    "click (>=8.2.1,<9.0.0)"
]

[tool.poetry]
packages = [{include = "backend", from = "src"}]

[tool.poetry.scripts]
backend-cli = 'backend.cli:cli'

[tool.poetry.group.dev.dependencies]
pytest = "^8.4.0"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
